--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Bootstrap 4 CDN -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+
     <title>Extreme Hangman</title>
-    <header>
-        <h1>Welcome to Extreme Hangman</h1>
-    </header>
-</head>
-<body>
-buckle up
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="text-center">Extreme Hangman</h1>
+      <div class="float-right">
+        Mistakes: <span id="mistakes">0</span> of
+        <span id="maxWrong"></span>
+      </div>
+      <div class="text-center">
+        <img id="hangmanPic" src="./images/0.jpg" alt="" />
+        <p>Guess the word:</p>
+        <p id="wordSpotlight">The word to be guessed goes here</p>
+        <div id="keyboard"></div>
+        <button class="btn btn-info" onClick="reset()">Reset</button>
+      </div>
+    </div>
+
+    <script src="hangman.js"></script>
+  </body>
 </html>
