--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
 
-    <title>Extreme Hangman</title>
+    <title>Extreme Hangman!!!</title>
   </head>
   <body>
     <div class="container">
