--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
 
-    <title>Extreme Hangman!!!</title>
+    <title>Extreme Hangman</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Extreme Hangman</h1>
+      <h1 class="text-center">Extreme Hangman!!!</h1>
       <div class="float-right">
         Mistakes: <span id="mistakes">0</span> of
         <span id="maxWrong"></span>
