--- a/index.html
+++ b/index.html
@@ -5,30 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Bootstrap 4 CDN -->
+    <!-- Fonts and style -->
+    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Eater&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
     <title>Extreme Hangman</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Extreme Hangman</h1>
-      <div class="float-right">
+      <h1 class="animate__animated animate__pulse">Extreme Hangman</h1>
+      <div>
         Mistakes: <span id="mistakes">0</span> of
         <span id="maxWrong"></span>
       </div>
       <div class="text-center">
         <img id="hangmanPic" src="./images/0.jpg" alt="" />
-        <p>Guess the word:</p>
+        <p id="introPara">Guess the word:</p>
         <p id="wordSpotlight">The word to be guessed goes here</p>
         <div id="keyboard"></div>
+        <br />
         <button class="btn btn-info" onClick="reset()">Reset</button>
       </div>
+      <br />
     </div>
 
+    <footer>made by Bryce Richarson</footer>
     <script src="hangman.js"></script>
   </body>
 </html>
