--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <div>
         Mistakes: <span id="mistakes">0</span> of
         <span id="maxWrong"></span>
-      </div>
-      <div class="text-center">
-        <img id="hangmanPic" src="./images/0.jpg" alt="" />
+        <div>
+          <img id="hangmanPic" src="./images/0.jpg" alt="" />
+        </div>
         <p id="introPara">Guess the word:</p>
         <p id="wordSpotlight">The word to be guessed goes here</p>
         <div id="keyboard"></div>
